--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Resume - Sujendra Giri Prasad Bharadwaj latest.pdf')"
+            onclick="window.open('./assets/Sujendra - Resume Latest 1.pdf')"
           >
             Download CV
           </button>
