--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <h3>Experience</h3>
             <div class="education-entry">
             <h4>Wakefit Innovations Limited - Bengaluru, Karnataka</h4>
-            <p><strong>Quality Assurance Engineer (Automation) : June 2023 – July 2025</strong></p>
+            <p><strong>(Automation Engineer - Software Development): June 2023 – July 2025</strong></p>
             <ul>
             <li>Built backend solutions with Django, SQL, MongoDB, Redis, and microservices (gRPC, Docker); optimized architecture and implemented analytics</li>
             <li>Automated testing with Python (Selenium, Playwright, BeautifulSoup); validated APIs (Postman/Swagger); executed security, load, and performance tests — reduced regression by 35%</li>
