--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
               <h3>Experience</h3>
             <div class="education-entry">
             <h4>Wakefit Innovations Limited - Bengaluru, Karnataka</h4>
-            <p><strong>(Automation Engineer - Software Development): June 2023 – July 2025</strong></p>
+            <p><strong>(Software Engineer): June 2023 – July 2025</strong></p>
             <ul>
-            <li>Built backend solutions with Django, SQL, MongoDB, Redis, and microservices (gRPC, Docker); optimized architecture and implemented analytics</li>
-            <li>Automated testing with Python (Selenium, Playwright, BeautifulSoup); validated APIs (Postman/Swagger); executed security, load, and performance tests — reduced regression by 35%</li>
-            <li>Managed AWS deployments, CI/CD with Jenkins, and Agile workflows with Jira</li>
-            <li>Optimized fulfillment workflows (500+ shipments) and integrated Shipsy logistics — reduced delays by 7% and errors by 10%</li>
+            <li>Built backend systems using Django and integrated Go-based gRPC microservices, containerized with Docker, enabling deployment of 5+ microservices with consistent performance</li>
+            <li>Leveraged Redis for caching and MySQL/MongoDB for persistent storage, reducing database query latency by 40%. Improved backend performance by 18% through optimized RESTful API design, validated APIs with 100% endpoint coverage using Postman and Swagger, and enhanced inter-service communication. Used Git/Bitbucket for version control</li>
+            <li>Automated UI and API testing with Python, Selenium, and Playwright, and conducted load, performance, and security testing with Grafana k6 (TypeScript), including vulnerability assessment, reducing regression defects by 35% and improving data integrity by 30%</li>
+            <li>Managed AWS deployments and implemented CI/CD pipelines using Jenkins, improving release speed and reliability by 25%. Worked with AWS S3 for storing and processing ~1TB of daily data, and utilized AWS ECS for containerized application management</li>
+            <li>Collaborated with frontend and DevOps teams throughout the SDLC in Agile sprints via Jira and Bitbucket, contributing to the on-time delivery of 12+ product features</li>
             </ul>
             </ul>
             <h4>Ethnotech Academic Solutions - Bengaluru, Karnataka</h4>
