--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="window.open('https://www.linkedin.com/in/sujendra-bharadwaj', '_blank')"
+            onclick="window.open('https://www.linkedin.com/in/sb2305', '_blank')"
             />
     
           <img
