--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/sb2305/">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -439,7 +439,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2025 Sujendra Giri Prasad Bharadwaj. All Rights Reserved.</p>
+      <p>Copyright &#169; 2026 Sujendra Giri Prasad Bharadwaj. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
