--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile_picture.jpeg" alt="Sujendra Giri Prasad Bharadwaj profile picture" />
+        <img src="assets/WhatsApp Image 2025-12-29 at 6.47.59 PM.jpeg" alt="Sujendra Giri Prasad Bharadwaj profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
