--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <!-- For .ico file -->
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <!-- For .png file -->
+    <link rel="icon" href="./assets/favicon.png" type="image/png" />
+
   </head>
   <body>
     <nav id="desktop-nav">
