--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="icon" href="assets/WhatsApp Image 2025-12-29 at 6.47.59 PM.jpeg" type="image/png" />
+    <link rel="icon" href="assets/WhatsApp Image 2025-12-29 at 6.47.59 PM.jpeg" type="image/jpeg" />
   </head>
   <body>
     <nav id="desktop-nav">
