--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <h4>Wakefit Innovations Limited - Bengaluru, Karnataka</h4>
             <p><strong>(Software Engineer): June 2023 – July 2025</strong></p>
             <ul>
-            <li>Built backend systems using Django and integrated Go-based gRPC microservices, containerized with Docker, enabling deployment of 5+ microservices with consistent performance</li>
-            <li>Leveraged Redis for caching and MySQL/MongoDB for persistent storage, reducing database query latency by 40%. Improved backend performance by 18% through optimized RESTful API design, validated APIs with 100% endpoint coverage using Postman and Swagger, and enhanced inter-service communication. Used Git/Bitbucket for version control</li>
-            <li>Automated UI and API testing with Python, Selenium, and Playwright, and conducted load, performance, and security testing with Grafana k6 (TypeScript), including vulnerability assessment, reducing regression defects by 35% and improving data integrity by 30%</li>
-            <li>Managed AWS deployments and implemented CI/CD pipelines using Jenkins, improving release speed and reliability by 25%. Worked with AWS S3 for storing and processing ~1TB of daily data, and utilized AWS ECS for containerized application management</li>
-            <li>Collaborated with frontend and DevOps teams throughout the SDLC in Agile sprints via Jira and Bitbucket, contributing to the on-time delivery of 12+ product features</li>
+            <li>Built Django backends with Go-based gRPC microservices, containerized using Docker, deploying 5+ microservices with reliable performance</li>
+            <li>Optimized Redis caching and MySQL/MongoDB storage to reduce query latency by 40% and improve RESTful API throughput by 18%; validated APIs with 100% coverage using Postman and Swagger</li>
+            <li>Automated UI, API, load, and security testing using Python, Selenium, Playwright, and Grafana k6, reducing regression defects by 35% and improving data integrity by 30%</li>
+            <li>Managed AWS deployments with Jenkins CI/CD, improving release reliability by 25%; handled ~1TB/day data using AWS S3 and deployed containers via AWS ECS</li>
+            <li>Collaborated across frontend and DevOps teams throughout the SDLC in Agile sprints using Jira and Bitbucket, delivering 12+ features on schedule</li>
             </ul>
             </ul>
             <h4>Ethnotech Academic Solutions - Bengaluru, Karnataka</h4>
