--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <h3>Experience</h3>
             <div class="education-entry">
             <h4>Wakefit Innovations Limited - Bengaluru, Karnataka</h4>
-            <p><strong>(Software Engineer): June 2023 – July 2025</strong></p>
+            <p><strong>Software Engineer: June 2023 – July 2025</strong></p>
             <ul>
             <li>Built Django backends with Go-based gRPC microservices, containerized using Docker, deploying 5+ microservices with reliable performance</li>
             <li>Optimized Redis caching and MySQL/MongoDB storage to reduce query latency by 40% and improve RESTful API throughput by 18%; validated APIs with 100% coverage using Postman and Swagger</li>
