--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
             <h4>Ethnotech Academic Solutions - Bengaluru, Karnataka</h4>
             <p><strong>Network Design Intern : October 2022 – December 2022</strong></p>
             <ul>
-            <li>Engineered and managed company network via Cisco Packet Tracer, performing network administration with 15+ IPs, 200+ packet traces, and 100+ ping tests, increasing reliability by 11% and strengthening architecture and security; automated routine monitoring and troubleshooting processes, reducing downtime and improving network efficiency</li>
+            <li>Designed and managed enterprise network architecture using Cisco Packet Tracer, administering 15+ IPs and executing 200+ packet traces to validate routing and connectivity</li>
+              <li>Performed 100+ ping and latency tests to identify bottlenecks, improving network reliability and security by 11%</li>
+              <li>Automated routine monitoring and troubleshooting workflows, reducing network downtime and improving operational efficiency</li>
             </ul>
             </ul>
             
